Correct typo in dpkg help message (thanks Clytie) and unfuzzy translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -66,6 +66,8 @@ dpkg (1.13.12~) unstable; urgency=low
     Closes: #325804
   * Fix German man page for update-alternatives(8)
     Closes: #247116
+  * Fix typo in dpkg online help message. Unfuzzy translations
+    Closes: #349299
 
   [ Guillem Jover ]
   * Add armeb to cputable. Closes: #331232
