--- a/po/bs.po
+++ b/po/bs.po
@@ -1,13 +1,9 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# SOME DESCRIPTIVE TITLE. Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER This file is distributed under the same license as the PACKAGE package. FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
-"POT-Creation-Date: 2005-10-11 22:24+0200\n"
+"POT-Creation-Date: 2005-12-22 01:10+0100\n"
 "PO-Revision-Date: 2004-11-27 01:29+0100\n"
 "Last-Translator: Safir Šećerović <sapphire@linux.org.ba>\n"
 "Language-Team: Bosnian <lokal@linux.org.ba>\n"
@@ -151,7 +147,8 @@ msgstr ""
 #: lib/dbmodify.c:63
 #, c-format
 msgid ""
-"updates directory contains files with different length names (both %d and %d)"
+"updates directory contains files with different length names (both %d and "
+"%d)"
 msgstr ""
 
 #: lib/dbmodify.c:77
@@ -276,7 +273,7 @@ msgid "failed to install `%.250s' as `%.250s' containing %s info"
 msgstr ""
 
 #: lib/ehandle.c:81
-msgid "out of memory pushing error handler: "
+msgid "out of memory pushing error handler:  "
 msgstr ""
 
 #: lib/ehandle.c:96
@@ -395,8 +392,7 @@ msgstr ""
 
 #: lib/fields.c:305
 #, c-format
-msgid ""
-"`%s' field, missing package name, or garbage where package name expected"
+msgid "`%s' field, missing package name, or garbage where package name expected"
 msgstr ""
 
 #: lib/fields.c:308
@@ -841,7 +837,7 @@ msgid "empty value for %s"
 msgstr ""
 
 #: lib/showcright.c:33
-msgid "cannot open GPL file "
+msgid "cannot open GPL file  "
 msgstr ""
 
 #: lib/showpkg.c:70
@@ -884,12 +880,12 @@ msgstr ""
 #: src/archives.c:358
 #, c-format
 msgid ""
-"trying to overwrite `%.250s', which is the diverted version of `%.250s'%.10s"
-"%.100s%.10s"
+"trying to overwrite `%.250s', which is the diverted version of "
+"`%.250s'%.10s%.100s%.10s"
 msgstr ""
 
 #: src/archives.c:362
-msgid " (package: "
+msgid " (package:  "
 msgstr ""
 
 #: src/archives.c:384
@@ -920,14 +916,13 @@ msgid "Replacing files in old package %s ...\n"
 msgstr ""
 
 #: src/archives.c:470
-#, fuzzy, c-format
+#, c-format, fuzzy
 msgid "Replaced by files in installed package %s ...\n"
 msgstr "Ažurirani instalirani paketi"
 
 #: src/archives.c:476
 #, c-format
-msgid ""
-"trying to overwrite directory `%.250s' in package %.250s with nondirectory"
+msgid "trying to overwrite directory `%.250s' in package %.250s with nondirectory"
 msgstr ""
 
 #: src/archives.c:486
@@ -1311,8 +1306,8 @@ msgstr ""
 #: src/configure.c:389
 #, c-format
 msgid ""
-"dpkg: %s: warning - conffile `%.250s' is not a plain file or symlink (= `%"
-"s')\n"
+"dpkg: %s: warning - conffile `%.250s' is not a plain file or symlink (= "
+"`%s')\n"
 msgstr ""
 
 #: src/configure.c:407
@@ -1472,27 +1467,27 @@ msgid "unable to check for existence of `%.250s'"
 msgstr ""
 
 #: src/depcon.c:153 src/packages.c:389
-msgid " depends on "
+msgid " depends on  "
 msgstr "zavisi o"
 
 #: src/depcon.c:154
-msgid " pre-depends on "
+msgid " pre-depends on  "
 msgstr "unaprijed zavisi o"
 
 #: src/depcon.c:155
-msgid " recommends "
+msgid " recommends  "
 msgstr "preporučuje"
 
 #: src/depcon.c:156
-msgid " conflicts with "
+msgid " conflicts with  "
 msgstr "sukobljava se sa"
 
 #: src/depcon.c:157
-msgid " suggests "
+msgid " suggests  "
 msgstr "predlaže"
 
 #: src/depcon.c:158
-msgid " enhances "
+msgid " enhances  "
 msgstr "poboljšava"
 
 #: src/depcon.c:234
@@ -1596,7 +1591,8 @@ msgstr ""
 #: src/enquiry.c:91
 msgid ""
 "The following packages are only half configured, probably due to problems\n"
-"configuring them the first time.  The configuration should be retried using\n"
+"configuring them the first time.  The configuration should be retried "
+"using\n"
 "dpkg --configure <package> or the configure menu option in dselect:\n"
 msgstr ""
 
@@ -1621,7 +1617,7 @@ msgstr ""
 
 #: src/enquiry.c:211
 #, c-format
-msgid " %d in %s: "
+msgid " %d in %s:  "
 msgstr ""
 
 #: src/enquiry.c:226
@@ -1666,8 +1662,7 @@ msgid "--print-architecture does not take any argument"
 msgstr ""
 
 #: src/enquiry.c:419
-msgid ""
-"--compare-versions takes three arguments: <version> <relation> <version>"
+msgid "--compare-versions takes three arguments: <version> <relation> <version>"
 msgstr ""
 
 #: src/enquiry.c:424
@@ -1692,8 +1687,7 @@ msgid ""
 msgstr ""
 
 #: src/errors.c:81
-msgid ""
-"dpkg: failed to allocate memory for new entry in list of failed packages."
+msgid "dpkg: failed to allocate memory for new entry in list of failed packages."
 msgstr ""
 
 #: src/errors.c:91
@@ -1716,13 +1710,13 @@ msgstr ""
 
 #: src/errors.c:116
 #, c-format
-msgid ""
-"Package %s is on hold, not touching it.  Use --force-hold to override.\n"
+msgid "Package %s is on hold, not touching it.  Use --force-hold to override.\n"
 msgstr ""
 
 #: src/errors.c:125
 msgid ""
 "dpkg - warning, overriding problem because --force enabled:\n"
+" "
 " "
 msgstr ""
 
@@ -1755,7 +1749,7 @@ msgstr ""
 
 #: src/filesdb.c:201
 #, c-format
-msgid "(Reading database ... "
+msgid "(Reading database ...  "
 msgstr ""
 
 #: src/filesdb.c:209
@@ -1999,14 +1993,14 @@ msgid "Debian GNU/Linux `"
 msgstr ""
 
 #: src/main.c:46
-msgid "' package management program version "
+msgid "' package management program version  "
 msgstr ""
 
 #: src/main.c:48 src/query.c:462
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or\n"
 "later for copying conditions.  There is NO warranty.\n"
-"See "
+"See  "
 msgstr ""
 
 #: src/main.c:50 src/query.c:464
@@ -2022,7 +2016,8 @@ msgid ""
 "  dpkg -A|--record-avail <.deb file name> ... | -R|--recursive <dir> ...\n"
 "  dpkg --configure              <package name> ... | -a|--pending\n"
 "  dpkg -r|--remove | -P|--purge <package name> ... | -a|--pending\n"
-"  dpkg --get-selections [<pattern> ...]    get list of selections to stdout\n"
+"  dpkg --get-selections [<pattern> ...]    get list of selections to "
+"stdout\n"
 "  dpkg --set-selections                    set package selections from "
 "stdin\n"
 "  dpkg --update-avail <Packages-file>      replace available packages info\n"
@@ -2033,7 +2028,8 @@ msgid ""
 "  dpkg -s|--status <package-name> ...      display package status details\n"
 "  dpkg -p|--print-avail <package-name> ... display available version "
 "details\n"
-"  dpkg -L|--listfiles <package-name> ...   list files `owned' by package(s)\n"
+"  dpkg -L|--listfiles <package-name> ...   list files `owned' by "
+"package(s)\n"
 "  dpkg -l|--list [<pattern> ...]           list packages concisely\n"
 "  dpkg -S|--search <pattern> ...           find package(s) owning file(s)\n"
 "  dpkg -C|--audit                          check for broken package(s)\n"
@@ -2052,15 +2048,17 @@ msgid ""
 "\n"
 "Options:\n"
 "  --admindir=<directory>     Use <directory> instead of %s\n"
-"  --root=<directory>         Install on alternative system rooted elsewhere\n"
+"  --root=<directory>         Install on alternative system rooted "
+"elsewhere\n"
 "  --instdir=<directory>      Change inst'n root without changing admin dir\n"
-"  -O|--selected-only         Skip packages not selected for install/upgrade\n"
+"  -O|--selected-only         Skip packages not selected for "
+"install/upgrade\n"
 "  -E|--skip-same-version     Skip packages whose same version is installed\n"
 "  -G|--refuse-downgrade      Skip packages with earlier version than "
 "installed\n"
 "  -B|--auto-deconfigure      Install even if it would break some other "
 "package\n"
-"  --no-debsig                Do no try to verify package signatures\n"
+"  --no-debsig                Do not try to verify package signatures\n"
 "  --no-act|--dry-run|--simulate\n"
 "                             Just say what we would do - don't do it\n"
 "  -D|--debug=<octal>         Enable debugging - see -Dhelp or --debug=help\n"
@@ -2073,9 +2071,11 @@ msgid ""
 "  --abort-after <n>              Abort after encountering <n> errors\n"
 "\n"
 "Comparison operators for --compare-versions are:\n"
-" lt le eq ne ge gt       (treat empty version as earlier than any version);\n"
+" lt le eq ne ge gt       (treat empty version as earlier than any "
+"version);\n"
 " lt-nl le-nl ge-nl gt-nl (treat empty version as later than any version);\n"
-" < << <= = >= >> >       (only for compatibility with control file syntax).\n"
+" < << <= = >= >> >       (only for compatibility with control file "
+"syntax).\n"
 "\n"
 "Use `dselect' or `aptitude' for user-friendly package management.\n"
 msgstr ""
@@ -2118,7 +2118,8 @@ msgid ""
 "    200   conffdetail       Lots of output for each configuration file\n"
 "     40   depcon            Dependencies and conflicts\n"
 "    400   depcondetail      Lots of dependencies/conflicts output\n"
-"   1000   veryverbose       Lots of drivel about eg the dpkg/info directory\n"
+"   1000   veryverbose       Lots of drivel about eg the dpkg/info "
+"directory\n"
 "   2000   stupidlyverbose   Insane amounts of drivel\n"
 "\n"
 "Debugging options are be mixed using bitwise-or.\n"
@@ -2149,7 +2150,8 @@ msgstr ""
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
-"  stop with error:    --refuse-<thing>,<thing>,... | --no-force-<thing>,...\n"
+"  stop with error:    --refuse-<thing>,<thing>,... | "
+"--no-force-<thing>,...\n"
 " Forcing things:\n"
 "  all                    Set all force options\n"
 "  auto-select [*]        (De)select packages to install (remove) them\n"
@@ -2168,7 +2170,8 @@ msgid ""
 "  depends [!]            Turn all dependency problems into warnings\n"
 "  confnew [!]            Always use the new config files, don't prompt\n"
 "  confold [!]            Always use the old config files, don't prompt\n"
-"  confdef [!]            Use the default option for new config files if one\n"
+"  confdef [!]            Use the default option for new config files if "
+"one\n"
 "                         is available, don't prompt. If no default can be "
 "found,\n"
 "                         you will be prompted unless one of the confold or\n"
@@ -2181,7 +2184,8 @@ msgid ""
 "  remove-reinstreq [!]   Remove packages which require installation\n"
 "  remove-essential [!]   Remove an essential package\n"
 "\n"
-"WARNING - use of options marked [!] can seriously damage your installation.\n"
+"WARNING - use of options marked [!] can seriously damage your "
+"installation.\n"
 "Forcing options marked [*] are enabled by default.\n"
 msgstr ""
 
@@ -2259,11 +2263,11 @@ msgid ""
 msgstr ""
 
 #: src/packages.c:267 src/packages.c:311 src/packages.c:324
-msgid "  Package "
+msgid "  Package  "
 msgstr ""
 
 #: src/packages.c:270 src/packages.c:314 src/packages.c:327
-msgid " which provides "
+msgid " which provides  "
 msgstr ""
 
 #: src/packages.c:273
@@ -2271,11 +2275,11 @@ msgid " is to be removed.\n"
 msgstr ""
 
 #: src/packages.c:285
-msgid "  Version of "
+msgid "  Version of  "
 msgstr ""
 
 #: src/packages.c:287
-msgid " on system is "
+msgid " on system is  "
 msgstr ""
 
 #: src/packages.c:307
@@ -2604,7 +2608,7 @@ msgstr ""
 
 #: src/query.c:472
 #, c-format
-msgid "Usage: "
+msgid "Usage:  "
 msgstr "Upotreba:"
 
 #: src/query.c:473
@@ -2629,8 +2633,8 @@ msgid ""
 "  A format is a string that will be output for each package. The format\n"
 "  can include the standard escape sequences \\n (newline), \\r (carriage\n"
 "  return) or \\\\ (plain backslash). Package information can be included\n"
-"  by inserting variable references to package fields using the ${var[;"
-"width]}\n"
+"  by inserting variable references to package fields using the "
+"${var[;width]}\n"
 "  syntax. Fields will be right-aligned unless the width is negative in "
 "which\n"
 "   case left aligenment will be used. \n"
@@ -2645,8 +2649,7 @@ msgstr ""
 
 #: src/remove.c:92
 #, c-format
-msgid ""
-"dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
+msgid "dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
 msgstr ""
 
 #: src/remove.c:100
@@ -2697,8 +2700,8 @@ msgstr ""
 #: src/remove.c:251 src/remove.c:364
 #, c-format
 msgid ""
-"dpkg - warning: while removing %.250s, unable to remove directory `%.250s': %"
-"s - directory may be a mount point ?\n"
+"dpkg - warning: while removing %.250s, unable to remove directory `%.250s': "
+"%s - directory may be a mount point ?\n"
 msgstr ""
 
 #: src/remove.c:258 src/remove.c:371
@@ -2837,15 +2840,15 @@ msgid "--forget-old-unavail takes no arguments"
 msgstr ""
 
 #: dselect/basecmds.cc:121
-msgid "Search for ? "
+msgid "Search for ?  "
 msgstr ""
 
 #: dselect/basecmds.cc:143
-msgid "Error: "
+msgid "Error:  "
 msgstr "Greška:"
 
 #: dselect/basecmds.cc:171
-msgid "Help: "
+msgid "Help:  "
 msgstr "Pomoć:"
 
 #: dselect/basecmds.cc:177
@@ -2859,7 +2862,7 @@ msgstr ""
 #: dselect/basecmds.cc:192
 msgid ""
 "Press a key from the list above, <space> or `q' to exit help,\n"
-"  or `.' (full stop) to read each help page in turn. "
+"  or `.' (full stop) to read each help page in turn.  "
 msgstr ""
 
 #: dselect/basecmds.cc:198
@@ -2951,7 +2954,7 @@ msgstr ""
 
 #: dselect/baselist.cc:307
 #, c-format
-msgid "  -- %d%%, press "
+msgid "  -- %d%%, press  "
 msgstr ""
 
 #: dselect/baselist.cc:310
@@ -3259,7 +3262,8 @@ msgid ""
 "       packages in { `U'  - unpacked but not yet configured;\n"
 "      these states { `C'  - half-configured (an error happened);\n"
 "        are broken { `I'  - half-installed (an error happened).\n"
-" Old mark: what was requested for this package before presenting this list;\n"
+" Old mark: what was requested for this package before presenting this "
+"list;\n"
 " Mark: what is requested for this package:\n"
 "  `*': marked for installation or upgrade;\n"
 "  `-': marked for removal, but any configuration files will remain;\n"
@@ -3319,7 +3323,8 @@ msgid ""
 "then\n"
 "be prompted for the information required to do the installation.\n"
 "\n"
-"As you move the highlight a description of each method, where available, is\n"
+"As you move the highlight a description of each method, where available, "
+"is\n"
 "displayed in the bottom half of the screen.\n"
 "\n"
 "If you wish to quit without changing anything use the `x' key while in the "
@@ -3479,7 +3484,8 @@ msgid ""
 "Usage: dselect [options]\n"
 "       dselect [options] action ...\n"
 "Options:  --admindir <directory>  (default is /var/lib/dpkg)\n"
-"          --help  --version  --licence  --expert  --debug <file> | -D<file>\n"
+"          --help  --version  --licence  --expert  --debug <file> | "
+"-D<file>\n"
 "          --colour screenpart:[foreground],[background][:attr[+attr+..]]\n"
 "Actions:  access update select install config remove quit\n"
 msgstr ""
@@ -3536,7 +3542,7 @@ msgstr ""
 #: dselect/main.cc:303
 msgid ""
 "Set your TERM variable correctly, use a better terminal,\n"
-"or make do with the per-package management tool "
+"or make do with the per-package management tool  "
 msgstr ""
 
 #: dselect/main.cc:306
@@ -3602,7 +3608,7 @@ msgid "[none]"
 msgstr ""
 
 #: dselect/methlist.cc:191
-msgid "explanation of "
+msgid "explanation of  "
 msgstr ""
 
 #: dselect/methlist.cc:201
@@ -3847,7 +3853,7 @@ msgid "purge"
 msgstr "očisti"
 
 #: dselect/pkgdisplay.cc:48
-msgid " "
+msgid "  "
 msgstr ""
 
 #: dselect/pkgdisplay.cc:49
@@ -4127,7 +4133,7 @@ msgid ""
 msgstr ""
 
 #: dselect/pkginfo.cc:96
-msgid "interrelationships affecting "
+msgid "interrelationships affecting  "
 msgstr ""
 
 #: dselect/pkginfo.cc:102
@@ -4135,7 +4141,7 @@ msgid "interrelationships"
 msgstr ""
 
 #: dselect/pkginfo.cc:108
-msgid "description of "
+msgid "description of  "
 msgstr ""
 
 #: dselect/pkginfo.cc:112
@@ -4151,7 +4157,7 @@ msgid "currently installed control info"
 msgstr ""
 
 #: dselect/pkginfo.cc:134
-msgid "installed control info for "
+msgid "installed control info for  "
 msgstr ""
 
 #: dselect/pkginfo.cc:148
@@ -4159,7 +4165,7 @@ msgid "available version of control file info"
 msgstr ""
 
 #: dselect/pkginfo.cc:150
-msgid "available version of control info for "
+msgid "available version of control info for  "
 msgstr ""
 
 #: dselect/pkglist.cc:123 dselect/pkglist.cc:124
@@ -4179,7 +4185,7 @@ msgid " does not appear to be available\n"
 msgstr ""
 
 #: dselect/pkgsublist.cc:122
-msgid " or "
+msgid " or  "
 msgstr ""
 
 #: dselect/pkgtop.cc:56
@@ -4341,8 +4347,7 @@ msgstr ""
 
 #: dpkg-deb/build.c:278
 #, c-format
-msgid ""
-"warning, conffile name `%.50s...' is too long, or missing final newline\n"
+msgid "warning, conffile name `%.50s...' is too long, or missing final newline\n"
 msgstr ""
 
 #: dpkg-deb/build.c:290
@@ -4757,7 +4762,7 @@ msgid "--contents takes exactly one argument"
 msgstr ""
 
 #: dpkg-deb/main.c:48
-msgid "' package archive backend version "
+msgid "' package archive backend version  "
 msgstr ""
 
 #: dpkg-deb/main.c:50
@@ -4793,15 +4798,16 @@ msgid ""
 "  --nocheck                  suppress control file check (build bad "
 "package).\n"
 "  -z# to set the compression when building\n"
-"  -Z<type>                   set the compression type to use when building.\n"
+"  -Z<type>                   set the compression type to use when "
+"building.\n"
 "                             allowed values: gzip, bzip2, none\n"
 "\n"
 "Format syntax:\n"
 "  A format is a string that will be output for each package. The format\n"
 "  can include the standard escape sequences \\n (newline), \\r (carriage\n"
 "  return) or \\\\ (plain backslash). Package information can be included\n"
-"  by inserting variable references to package fields using the ${var[;"
-"width]}\n"
+"  by inserting variable references to package fields using the "
+"${var[;width]}\n"
 "  syntax. Fields will be right-aligned unless the width is negative in "
 "which\n"
 "   case left alignment will be used. \n"
@@ -4967,7 +4973,7 @@ msgid "part %d is missing"
 msgstr ""
 
 #: dpkg-split/main.c:39
-msgid "Debian GNU/Linux `dpkg-split' package split/join tool; version "
+msgid "Debian GNU/Linux `dpkg-split' package split/join tool; version  "
 msgstr ""
 
 #: dpkg-split/main.c:41
@@ -4984,8 +4990,8 @@ msgid ""
 "       dpkg-split -j|--join <part> <part> ...      Join parts together.\n"
 "       dpkg-split -I|--info <part> ...             Display info about a "
 "part.\n"
-"       dpkg-split -h|--help|--version|--licence    Show help/version/"
-"licence.\n"
+"       dpkg-split -h|--help|--version|--licence    Show "
+"help/version/licence.\n"
 "\n"
 "       dpkg-split -a|--auto -o <complete> <part>   Auto-accumulate parts.\n"
 "       dpkg-split -l|--listq                       List unmatched pieces.\n"
@@ -4994,8 +5000,8 @@ msgid ""
 "\n"
 "Options:  --depotdir <directory>  (default is %s/%s)\n"
 "          -S|--partsize <size>    (in Kb, for -s, default is 450)\n"
-"          -o|--output <file>      (for -j, default is <package>-<version>."
-"deb)\n"
+"          -o|--output <file>      (for -j, default is "
+"<package>-<version>.deb)\n"
 "          -Q|--npquiet            (be quiet when -a is not a part)\n"
 "          --msdos                 (generate 8.3 filenames)\n"
 "\n"
@@ -5075,11 +5081,11 @@ msgstr ""
 
 #: dpkg-split/queue.c:162
 #, c-format
-msgid "Part %d of package %s filed (still want "
+msgid "Part %d of package %s filed (still want  "
 msgstr ""
 
 #: dpkg-split/queue.c:166
-msgid " and "
+msgid " and  "
 msgstr ""
 
 #: dpkg-split/queue.c:179
