Resync with sources and unhappily fuzzy 36 strings...

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-22 Christian Perrier  <bubulle@debian.org>
 
+	* *.po: resynced with sources and fuzzy 36 strings...:-|
+
+2006-01-22 Christian Perrier  <bubulle@debian.org>
+
 	* fr.po: re-updated to 1000t
 
 2006-01-22 Clytie Siddall  <clytie@riverland.net.au>
