--- a/debian/changelog
+++ b/debian/changelog
@@ -44,8 +44,7 @@ dpkg (1.13.12~) unstable; urgency=low
     - Norwegian Nynorsk. Closes: #315987
     - Portuguese (Miguel Figueiredo).
       Closes: #315461, #323674, #323642, #330021
-    - Spanish (Javier Fernández-Sanguino Peña). 
-      Closes: #323662, #323662, #315253
+    - Spanish (Javier Fernández-Sanguino Peña). Closes: #323662, #315253
     - Danish (Claus Hindsgaul). Closes: #348575, #323779, #337948, #325687
     - Dutch (Bart Cornelis). Closes: #323908
     - German (Michael Piefel). Closes: #323964
