When linking statically, explicitly add libsepol, even if its only a transitive library. The proper fix should come with a pkg-config file. Based on a patch by Bart Martens <bart.martens@advalvas.be>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-01-23  Bart Martens  <bart.martens@advalvas.be>,
+	    Guillem Jover  <guillem@debian.org>
+
+	* debian/contrl (Build-Depends): Add libsepol1-dev as a temporary
+	workaround until libselinux1-dev has pkg-config support.
+	* m4/libs.m4 (DPKG_LIB_SELINUX): Explicitly statically link against
+	libsepol.
+
 2006-01-20  Aurelien Jarno  <aurel32@debian.org>
 
 	* debian/control (Build-Depends): Do not depend on libselinux1-dev
