--- a/debian/changelog
+++ b/debian/changelog
@@ -73,6 +73,10 @@ dpkg (1.13.12~) unstable; urgency=low
     Thanks to Lennert Buytenhek <buytenh+debian@wantstofly.org>.
   * Don't try to compile in SELinux support on GNU/kFreeBSD.  Closes: #313300
     Thanks to Aurelien Jarno <aurel32@debian.org>.
+  * When linking statically, explicitly add libsepol, even if its only a
+    transitive library. The proper fix should come with a pkg-config file.
+    Based on a patch by Bart Martens <bart.martens@advalvas.be>.
+    Closes: #347744, #348659
 
  --
 
