--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-23  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-source.pl: Add a missing '+' in the architecture
+	validator regex.
+
 2006-01-23  Bart Martens  <bart.martens@advalvas.be>,
 	    Guillem Jover  <guillem@debian.org>
 
