--- a/debian/changelog
+++ b/debian/changelog
@@ -77,6 +77,9 @@ dpkg (1.13.12~) unstable; urgency=low
     transitive library. The proper fix should come with a pkg-config file.
     Based on a patch by Bart Martens <bart.martens@advalvas.be>.
     Closes: #347744, #348659
+  * Add support for architecture wildcards, but for now they will only be
+    exposed in debian/control files, not in binary nor source packages.
+    Closes: #291939
 
  --
 
