* AUTHORS: Updated for new maintainance team * debian/copyright: Add myself as copyright holder since I also added a note to that effect with my dpkg-shlibdeps patch.

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,10 +11,14 @@ based on the Perl implementation by:
 
 It is currently maintained by:
 
-	Scott James Remnant <scott@netsplit.com>
+	Guillem Jover <guillem@debian.org>
+	Brendan O'Dea <bod@debian.org>
+	Christian Perrier <bubulle@debian.org>
+	Frank Lichtenheld <djpig@debian.org>
 
 and has previously been maintained by:
 
+	Scott James Remnant <scott@netsplit.com> (2004-2005)
 	Adam Heath <doogie@brainfood.com> (2001-2003)
 	Wichert Akkerman <wakkerma@debian.org> (1999-2003)
 	Ben Collins <bcollins@debian.org> (1999-2001)
