--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,11 @@
 	of the version in filenames, use (?=[.-]) and (?=\.) instead.
 	\b doesn't work in case the version ends with ~.
 
+	* AUTHORS: Updated for new maintainance team
+	* debian/copyright: Add myself as copyright holder since
+	I also added a note to that effect with my dpkg-shlibdeps
+	patch.
+
 2006-01-23  Guillem Jover  <guillem@debian.org>
 
 	Support for architecture wildcards.
