Cosmetic fixes. Add some more translator acks.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,14 +3,14 @@ dpkg (1.13.12) experimental; urgency=low
   * Due to the changes in dpkg-shlibdeps it is not recommended
     to use this version for building packages intended to be
     uploaded into an official archive, yet.
-  
+
   [ Frank Lichtenheld ]
-  * Update AUTHORS and debian/copyright for new maintainer team
-  
+  * Update AUTHORS and debian/copyright for new maintainer team.
+
   * Don't use the ldd output in dpkg-shlibdeps. Search for the
     matching libraries ourself. This fixes problems with both
-    symlinked directories Closes: #103024, #145714, #164020, #285857
-    and biarch builds Closes: #317082
+    symlinked directories, Closes: #103024, #145714, #164020, #285857
+    and biarch builds. Closes: #317082
   * Let dpkg-gencontrol bail out with an error if parsedep
     found an error while parsing a dependency field. Closes: #228125
   * dpkg-source -x now tries to chown all files extracted from
@@ -32,8 +32,8 @@ dpkg (1.13.12) experimental; urgency=low
   * Check for illegal architecture strings in dpkg-gencontrol and
     dpkg-source. dpkg-gencontrol will only issue a warning while
     dpkg-source will error out. Closes: #96920
-  * Add support "package types" to dpkg-shlibdeps. Patch by
-    Joey Hess. Closes: #335056, #345475
+  * Add support "package types" to dpkg-shlibdeps. Patch by Joey Hess.
+    Closes: #335056, #345475
   * Fix man page references to dpkg and dselect man pages. Many
     of them still had a wrong section.
     Closes: #332826
@@ -53,7 +53,7 @@ dpkg (1.13.12) experimental; urgency=low
     - Brazilian Portuguese (Andre Luis Lopes). Closes: #325224, #332872
     - Russian (Yuri Kozlov). Closes: #335170, #349151
     - Swedish (Peter karlsson). Closes: #325990, #344058, #337164, #334063
-    - Norwegian Nynorsk. Closes: #315987
+    - Norwegian Nynorsk (Håvard Korsvoll). Closes: #315987
     - Portuguese (Miguel Figueiredo).
       Closes: #315461, #323674, #323642, #330021
     - Spanish (Javier Fernández-Sanguino Peña). Closes: #323662, #315253
@@ -69,7 +69,7 @@ dpkg (1.13.12) experimental; urgency=low
     - Romanian (Eddy Petrişor). Closes: #340674
     - Vietnamese (Phan Vinh Thinh, Clytie Siddall).
     - Indonesian (Parlin Imanuel). Closes: #344513
-    - Greek. Closes: #344646
+    - Greek (Galaxico). Closes: #344646
     - Czech (Miroslav Kure). Closes: #345347
   * Fixed broken translation:
     - Brazilian Portuguese (James Troup). Closes: #332872
