dpkg and dselect are now in section admin, not section base. Correct info in the control file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-24  Frank Lichtenheld  <djpig@debian.org>
+
+	* debian/control: dpkg and dselect are now in section admin,
+	not section base. Correct info in the control file.
+
 2006-01-23  Vasilis Vasaitis  <v.vasaitis@sms.ed.ac.uk>
 
 	* utils/start-stop-daemon.c (pid_is_exec) [OSLinux]: Change function
