--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 2006-01-24  Frank Lichtenheld  <djpig@debian.org>
 
-	* debian/control: dpkg and dselect are now in section admin,
+	* debian/control:
+	(Section) dpkg and dselect are now in section admin,
 	not section base. Correct info in the control file.
+	(Standards-Version) Bump Standards-Version to 3.6.2 (no
+	changes).
 
 2006-01-23  Vasilis Vasaitis  <v.vasaitis@sms.ed.ac.uk>
 
