Fix typo in dpkg-architecture man page

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
 	(Standards-Version) Bump Standards-Version to 3.6.2 (no
 	changes).
 
+	* man/C/dpkg-architecture.1: Fix typo.
+
 2006-01-23  Vasilis Vasaitis  <v.vasaitis@sms.ed.ac.uk>
 
 	* utils/start-stop-daemon.c (pid_is_exec) [OSLinux]: Change function
