--- a/man/C/dpkg-architecture.1
+++ b/man/C/dpkg-architecture.1
@@ -206,7 +206,7 @@ endif
 And similarly for DEB_BUILD_ARCH_CPU and DEB_BUILD_ARCH_OS.
 .PP
 If you still wish to support versions of dpkg-dev that did not include
-\fIdpkg-architetcure\fR, the following does the job:
+\fIdpkg-architecture\fR, the following does the job:
 .IP
 .nf
 \&\s-1DEB_BUILD_ARCH\s0 := $(shell dpkg \-\-print\-architecture)
