--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.13.13~) unstable; urgency=low
   * dpkg and dselect are now in section admin, not section base.
     Correct info in the control file.
   * Bump Standards-Version to 3.6.2 (no changes).
+  * Fix typo in dpkg-architecture man page.
 
  --
 
