Fix error in Dutch translation

--- a/po/nl.po
+++ b/po/nl.po
@@ -1532,7 +1532,7 @@ msgid ""
 "      Z     : background this process to examine the situation\n"
 msgstr ""
 "   Wat wilt u er aan doen ?  De volgende keuzes zijn mogelijk:\n"
-"    Y of N  : installeer de versie van de pakketbeheerder\n"
+"    Y of I  : installeer de versie van de pakketbeheerder\n"
 "    N of O  : behoudt de huidig geïnstalleerde versie\n"
 "      D     : toon de verschillen tussen de versies\n"
 "      Z     : stuur dit proces naar de achtergrond om de situatie te "
