Fix error in Dutch translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,11 @@ dpkg (1.13.13~) unstable; urgency=low
   * Bump Standards-Version to 3.6.2 (no changes).
   * Fix typo in dpkg-architecture man page.
 
+  [ Christian Perrier ]
+  * Updated Translations:
+    - Dutch (Bart Cornelis). Fix error mentioned in #323908 by Stephan 
+      Kramer
+
  --
 
 dpkg (1.13.12) experimental; urgency=low
