Japanese translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ dpkg (1.13.13~) unstable; urgency=low
   * Updated Translations:
     - Dutch (Bart Cornelis). Fix error mentioned in #323908 by Stephan 
       Kramer
+    - Japanese (Kenshi Muto). Closes: #349808
 
  --
 
