--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-24 Kenshi Muto  <kmuto@debian.org>
+
+	* ja.po: updated to 1000t
+
 2006-01-22 Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: updated to 1000t
