Fix typo in dpkg-statoverride manpage. Closes: #348113 Thanks to Marc Haber <mh+debian-packages@zugschlus.de>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-26  Marc Haber  <mh+debian-packages@zugschlus.de>
+
+	* man/C/dpkg-statoverride.8: Fix typo.
+
 2006-01-24  Frank Lichtenheld  <djpig@debian.org>
 
 	* debian/control:
