--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,10 @@ dpkg (1.13.13~) unstable; urgency=low
       Kramer
     - Japanese (Kenshi Muto). Closes: #349808
 
+  [ Guillem Jover ]
+  * Fix typo in dpkg-statoverride manpage. Closes: #348113
+    Thanks to Marc Haber <mh+debian-packages@zugschlus.de>.
+
  --
 
 dpkg (1.13.12) experimental; urgency=low
