Document the --no-debsig option in dpkg manpage. Closes: #316367 Thanks to Bastian Kleineidam <calvin@debian.org>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-26  Bastian Kleineidam  <calvin@debian.org>
+
+	* man/C/dpkg.1: Document the --no-debsig option.
+
 2006-01-26  Marc Haber  <mh+debian-packages@zugschlus.de>
 
 	* man/C/dpkg-statoverride.8: Fix typo.
