--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ dpkg (1.13.13~) unstable; urgency=low
   [ Guillem Jover ]
   * Fix typo in dpkg-statoverride manpage. Closes: #348113
     Thanks to Marc Haber <mh+debian-packages@zugschlus.de>.
+  * Document the --no-debsig option in dpkg manpage. Closes: #316367
+    Thanks to Bastian Kleineidam <calvin@debian.org>.
 
  --
 
