Fix typos in dselect manpage. Closes: #310358 Thanks to A Costa <agcosta@gis.net>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-26  A Costa  <agcosta@gis.net>
+
+	* man/C/dselect.1: Fix typos.
+
 2006-01-26  Bastian Kleineidam  <calvin@debian.org>
 
 	* man/C/dpkg.1: Document the --no-debsig option.
