--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ dpkg (1.13.13~) unstable; urgency=low
     Thanks to Marc Haber <mh+debian-packages@zugschlus.de>.
   * Document the --no-debsig option in dpkg manpage. Closes: #316367
     Thanks to Bastian Kleineidam <calvin@debian.org>.
+  * Fix typos in dselect manpage. Closes: #310358
+    Thanks to A Costa <agcosta@gis.net>.
 
  --
 
