Fix typo in start-stop-daemon's help output. Closes: #333673 Thanks to Christoph Maser <cm@financial.com>.

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ dpkg (1.13.13~) unstable; urgency=low
     Thanks to Bastian Kleineidam <calvin@debian.org>.
   * Fix typos in dselect manpage. Closes: #310358
     Thanks to A Costa <agcosta@gis.net>.
+  * Fix typo in start-stop-daemon's help output. Closes: #333673
+    Thanks to Christoph Maser <cm@financial.com>.
 
  --
 
