--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-26  Christoph Maser  <cm@financial.com>
+
+	* utils/start-stop-daemon.c (do_help): Fix typo.
+
 2006-01-26  A Costa  <agcosta@gis.net>
 
 	* man/C/dselect.1: Fix typos.
