* Honor LD_LIBRARY_PATH in dpkg-shlibdeps. Fixes a regression   from 1.13.11 to .12. * Don't recurse into package directories to search for local   shlibs files since it is obviously a waste of time. Based   on a suggestion by Steve Langasek. Closes: #338725

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-01-27  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-shlibdeps.pl: Honor LD_LIBRARY_PATH when
+	searching for shared libraries.
+	* scripts/dpkg-shlibdeps.pl: Don't recurse into package
+	directories when searching for local shlibs files.
+
 2006-01-26  Zefram  <zefram@fysh.org>,
 	    Guillem Jover  <guillem@debian.org>
 
