Make dpkg-architecture not print the warning about a missmatch between gcc target machine type and GNU target system type if the actions are '-e' or '-i'.

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,9 @@ dpkg (1.13.13~) unstable; urgency=low
   * Document the correct format string for dpkg-query --showformat option.
     Update -l example and lower case the program name in the title header.
     Thanks to Zefram <zefram@fysh.org>. Closes: #174976
+  * Make dpkg-architecture not print the warning about a missmatch between
+    gcc target machine type and GNU target system type if the actions are
+    '-e' or '-i'.
 
  --
 
