Prepare release 1.13.13 (this time don't forget updating configure.ac)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-28  Frank Lichtenheld  <djpig@debian.org>
+
+	* configure.ac: Release 1.13.13
+
 2006-01-28  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-architecture.pl: Do not print the warning about a
