--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-29  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Bump version to 1.13.14~.
+
 2006-01-28  Frank Lichtenheld  <djpig@debian.org>
 
 	* configure.ac: Release 1.13.13
