--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.13.14~) UNRELEASED; urgency=low
+
+
+ -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
+
 dpkg (1.13.13) unstable; urgency=low
 
   [Frank Lichtenheld]
