Make start-stop-daemon print the proper version instead of 'VERSION'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-01-29  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (do_help): Print the proper version giving
+	it as an argument to printf, instead of printing 'VERSION'.
+
+2006-01-29  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Bump version to 1.13.14~.
 
 2006-01-28  Frank Lichtenheld  <djpig@debian.org>
