--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 dpkg (1.13.14~) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Make start-stop-daemon print the proper version instead of 'VERSION'.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
