--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Make start-stop-daemon print the proper version instead of 'VERSION'.
+  
+  [ Frank Lichtenheld ]
+  * Let dpkg-source ignore comments in the hunk header as used by
+  diff -p (Anand Kumria). Closes: #344880
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
