Let dpkg-buildpackage create a .changes file even if signing the .dsc file failed. This makes it easier to just sign the package later (Julian Gilbey). Closes: #217963

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-29  Julian Gilbey  <jdg@debian.org>
+
+	* scripts/dpkg-buildpackage.sh: Create .changes
+	file even if signing .dsc file fails to make it
+	easier to just sign the package later.
+
 2006-01-29  Anand Kumria  <wildfire@progsoc.org>
 
 	* scripts/dpkg-source.pl (checkdiff): Ignore comments
