Change heuristics of dpkg-buildpackage's gpg check to allow for more complex setups (Julian Gilbey). Closes: #163061

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@
 	file even if signing .dsc file fails to make it
 	easier to just sign the package later.
 
+	* scripts/dpkg-buildpackage.sh: Change heuristics
+	of gpg check so that it allows for more complex
+	setups.
+
 2006-01-29  Anand Kumria  <wildfire@progsoc.org>
 
 	* scripts/dpkg-source.pl (checkdiff): Ignore comments
