--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   * Let dpkg-buildpackage create a .changes file even if signing the
     .dsc file failed. This makes it easier to just sign the package
     later (Julian Gilbey). Closes: #217963
+  * Change heuristics of dpkg-buildpackage's gpg check to allow for
+    more complex setups (Julian Gilbey). Closes: #163061
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
