Add files and dirs used by bzr to default dpkg-source -i regex (maximilian attems). Closes: #345164

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
     later (Julian Gilbey). Closes: #217963
   * Change heuristics of dpkg-buildpackage's gpg check to allow for
     more complex setups (Julian Gilbey). Closes: #163061
+  * Add files and dirs used by bzr to default dpkg-source -i regex
+    (maximilian attems). Closes: #345164
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
