--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-29  maximilian attems  <debian@sternwelten.at>
+
+	* scripts/dpkg-source.pl: Add files and
+	dirs used by bzr to $diff_ignore_default_regexp.
+
 2006-01-29  Julian Gilbey  <jdg@debian.org>
 
 	* scripts/dpkg-buildpackage.sh: Create .changes
